--- a/css/demo.css
+++ b/css/demo.css
@@ -9,3 +9,13 @@
 
 .backgrounds {
   background: #1a1626; }
+
+a.github-corner {
+  position: absolute;
+  z-index: 1;
+  width: clamp(50px, 8vmax, 80px);
+  line-height: 0;
+  color: rgba(255, 255, 255, 0.5); }
+
+a.github-corner:hover {
+  color: white; }
