--- a/css/demo.css
+++ b/css/demo.css
@@ -1,21 +1,85 @@
 .slides {
   opacity: 0;
-  -webkit-transition: opacity .5s ease;
-  -o-transition: opacity .5s ease;
-  transition: opacity .5s ease; }
+  -webkit-transition: opacity 0.5s ease;
+  -o-transition: opacity 0.5s ease;
+  transition: opacity 0.5s ease;
+}
 
 .reveal.ready .slides {
-  opacity: 1; }
+  opacity: 1;
+}
 
 .backgrounds {
-  background: #1a1626; }
+  background: #1a1626;
+}
+
+.reveal.overview section {
+  background: #1a1626;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.slides {
+  opacity: 0;
+  -webkit-transition: opacity 0.5s ease;
+  -o-transition: opacity 0.5s ease;
+  transition: opacity 0.5s ease;
+}
+.reveal.ready .slides {
+  opacity: 1;
+}
+
+.reveal .padded img {
+  border: none;
+  margin: 0;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.row {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 30px;
+}
+
+.reveal .slides > section,
+.reveal .slides > section > section {
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
+}
+
+small {
+  margin: 1.5rem 0 2rem 0;
+}
+
+.small {
+  font-size: 75%;
+}
+
+small code {
+  font-size: 75%;
+  background: #222D2F;
+  color: #ddd;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.5rem;
+}
 
 a.github-corner {
   position: absolute;
   z-index: 1;
   width: clamp(50px, 8vmax, 80px);
   line-height: 0;
-  color: rgba(255, 255, 255, 0.5); }
+  color: rgba(255, 255, 255, 0.5);
+}
 
 a.github-corner:hover {
-  color: white; }
+  color: white;
+}
