--- a/src/demo/css/_base.scss
+++ b/src/demo/css/_base.scss
@@ -3,7 +3,8 @@
 @import 'base/_base-code';
 
 :root {
-	--r-heading-text-transform: none ;
+	--r-background-color: #051525;
+	--r-heading-text-transform: none;
 	--r-heading1-size: 2.7em;
 	--r-main-font-size: 36px;
 	--r-block-margin: 1.8rem;
