--- a/src/demo/css/_githubcorner.scss
+++ b/src/demo/css/_githubcorner.scss
@@ -1,22 +1,43 @@
 a.github-corner {
-    position: fixed;
-    z-index:2;
+    position: sticky;
+
+    border: none;
+    pointer-events: initial;
+    z-index: 2;
+    padding: 0;
     top: 0;
-    left: 0;
+    display: flex;
+	flex-direction: column;
+    line-height: 0;
+    width: max-content;
+    height: max-content;
+
     .rtl & {
         left: auto;
+        margin: 0 0 0 auto;
         right: 0;
     }
-    width:clamp(50px, 8vmax, 80px);
-    line-height:0;
+
     &.bottom {
-        top: auto;
-        bottom: 3px;;
+        position: sticky;
+        top: 100%;
+        margin-top: auto;
+        top: calc(100% - 70px );
     }
 
     opacity: 0.5;
     transition: opacity .3s;
     color: var(--c-theme-color, white);
+
+    .reveal.embedded & {
+        display: none
+    }
+
+    svg {
+        line-height: 0;
+        width: 75px;
+        height: 75px;
+    }
 }
 
 a.github-corner:hover{
