--- a/src/demo/html/demo.pug
+++ b/src/demo/html/demo.pug
@@ -19,7 +19,7 @@ block append scripts
 
 		// Initialize the deck
 		let revealdeck = new Reveal(deck);
-			revealdeck.initialize({
+		revealdeck.initialize({
 			history: true,
 			overview: true,
 			margin: 0.1,
@@ -27,7 +27,7 @@ block append scripts
 			center: true,
 			controlsTutorial: false,
 			appearance: {
-				debug: false,
+				debug: true,
 				appearparents: true,
 				hideagain: true,
 				appearevent: 'auto',
